# jetson-voice

./: .dockerignore  .gitignore  .gitmodules  Dockerfile.aarch64  Dockerfile.ros  Dockerfile.runtime  Dockerfile.x86_64  README.md
data/networks/: manifest.json
data/tests/: asr.json  asr_keyword.json  asr_vad.json  nlp_intent.json  nlp_qa.json  nlp_sentiment.json  nlp_token.json  tests.json  tts.json
docker/: build.sh  push.sh  run.sh  tag.sh
examples/: asr.py  assistant.py  nlp.py  nlp_qa.py  tts.py
jetson_voice/: __init__.py  asr.py  auto.py  nlp.py  test.py  tts.py
jetson_voice/backends/jarvis/: __init__.py  asr.py  jarvis_asr.py  jarvis_tts.py
jetson_voice/backends/onnxruntime/: __init__.py  ort_model.py
jetson_voice/backends/riva/: __init__.py  riva_asr.py  riva_tts.py
jetson_voice/backends/tensorrt/: __init__.py  trt_binding.py  trt_builder.py  trt_model.py
jetson_voice/models/: __init__.py
jetson_voice/models/asr/: __init__.py  asr_engine.py  ctc_beamsearch.py  ctc_decoder.py  ctc_greedy.py  ctc_utils.py
jetson_voice/models/nlp/: __init__.py  intent_slot.py  nlp_utils.py  question_answer.py  text_classification.py  token_classification.py
jetson_voice/models/tts/: __init__.py  tts_engine.py
jetson_voice/utils/: __init__.py  audio.py  config.py  resource.py  softmax.py
patches/nemo/1.0.0rc1/: exportable.py  setup.py
patches/nemo/1.0.0rc1/nlp/: __init__.py  distilbert.diff  distilbert.py  huggingface_utils.py  location.txt  mobilebert.py
patches/nemo/1.6.2/: requirements.txt  requirements_nlp.txt
patches/pytorch/1.6.0/: functional.diff  functional.py
patches/pytorch/1.7.0/: functional.diff  functional.py
patches/pytorch/1.9.0/: functional.diff  functional.py
patches/transformers/4.5.0/: convert_graph_to_onnx.diff  modeling_distilbert.py
patches/transformers/4.5.1/: convert_graph_to_onnx.py  modeling_distilbert.diff
ros/: CMakeLists.txt  package.xml
ros/jetson_voice_ros/: asr.py  audio_input.py  audio_output.py  nlp_intent_slot.py  nlp_question_answer.py  tts.py
ros/launch/: asr.launch.py  audio_playback.launch.py  tts.launch.py
ros/msg/: Audio.msg  AudioInfo.msg  IntentSlot.msg  QuestionAnswerQuery.msg  QuestionAnswerResult.msg  Slot.msg
scripts/: list_audio_devices.py  list_models.py  nemo_export_onnx.py  nemo_list_models.py  nemo_train_classifier.py  nemo_train_intent.py  nemo_train_ner.py  nemo_train_qa.py  os_version.sh  record_mic.py  start_jupyter.sh
tests/: run_tests.py  test_asr.py  test_nlp.py  test_tts.py
